deploy/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: backend
spec:
  selector:
    app: node-app 
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7001
    nodePort: 31110
